# ChangeLog for sys-kernel/openvz-sources
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.41 2006/09/26 15:11:02 phreak Exp $

*openvz-sources-026.018 (26 Sep 2006)

  26 Sep 2006; Christian Heim <phreak@gentoo.org>
  +openvz-sources-026.018.ebuild:
  Version bump.

*openvz-sources-026.017 (28 Aug 2006)

  28 Aug 2006; Benedikt Böhm <hollow@gentoo.org>
  +openvz-sources-026.017.ebuild:
  version bump

*openvz-sources-022.078-r2 (21 Jul 2006)

  21 Jul 2006; Christian Heim <phreak@gentoo.org>
  -openvz-sources-022.078.ebuild, +openvz-sources-022.078-r2.ebuild:
  Another revision bump. Fixing some UPSTREAM (main kernel) vulnerability.
  Removing previous version.

*openvz-sources-026.015-r2 (15 Jul 2006)

  15 Jul 2006; Christian Heim <phreak@gentoo.org>
  -openvz-sources-026.015.ebuild, -openvz-sources-026.015-r1.ebuild,
  +openvz-sources-026.015-r2.ebuild:
  Bump to 2.6.16.25; Fixing #140444 / CVE-2006-3626; Cleaning up old versions

*openvz-sources-026.015-r1 (14 Jul 2006)

  14 Jul 2006; Christian Heim <phreak@gentoo.org>
  +openvz-sources-026.015-r1.ebuild:
  Revision bump; Upstream just bumped the package to fix CVE-2006-2451

  09 Jul 2006; Christian Heim <phreak@gentoo.org>
  -openvz-sources-022.076.ebuild, openvz-sources-022.077.ebuild,
  -openvz-sources-026.012.ebuild, -openvz-sources-026.014.ebuild:
  Marking openvz-sources-022.077 stable on x86/amd64; Pruning old versions

*openvz-sources-026.015 (05 Jul 2006)

  05 Jul 2006; Christian Heim <phreak@gentoo.org>
  +openvz-sources-026.015.ebuild:
  Version bump; Adding 026.015 (see
  http://openvz.org/news/updates/devel-kernel-026test015.1 for a full
  ChangeLog) to the tree

*openvz-sources-022.078 (26 Jun 2006)

  26 Jun 2006; Christian Heim <phreak@gentoo.org>
  +openvz-sources-022.078.ebuild:
  Version bump

*openvz-sources-026.014 (07 Jun 2006)

  07 Jun 2006; Christian Heim <phreak@gentoo.org>