@@ -8,6 +8,7 @@ DIST openvz-patches-2.6.16_026.017.tar.bz2 498435 RMD160 ff83694d91adae211105dd1
 DIST openvz-patches-2.6.16_026.018.tar.bz2 542921 RMD160 67b4f8ff49ff8d4161c8d99ec6a5969c9b371397 SHA1 2668922008d988dbd7fe56f1923b18efe7a08b7f SHA256 02196ea056de4a63fe695f23e283420dedb3d1a7da11ddbac35c893352fa3bb0
 DIST openvz-patches-2.6.8_022.077.tar.bz2 2856725 RMD160 21bd0d386cfa96ebc9990ae1b77acb92684f2044 SHA1 996b61d0cef3a0b6d49e01f729bac7f97d232a51 SHA256 e026dd3a8f59a5a7b514c1085cfd90a00ca0231032e0dc1ac43f5377a2596dab
 DIST openvz-patches-2.6.8_022.078-r2.tar.bz2 2868345 RMD160 2c17726264244c8c3c66bba57d67da4cc629e3e6 SHA1 4bb99f02abc5c2f60a4fcbc7662cd0ed3906f7fa SHA256 903a392dee191032f97b9259845712d7b25768e423c7167a75d2ebe79819b945
+DIST openvz-patches-2.6.8_022.078-r3.tar.bz2 3579047 RMD160 876acf249b4188e3ed10ebee6b6a05c431fbebb7 SHA1 05fe005a39f868a9ec0b0c905f9e23a6c6b240e2 SHA256 a2b6caf79e3341717bbf1a048cd6bad4d9abfb2afeb36549155e6e57280ffb8c
 EBUILD openvz-sources-022.077.ebuild 788 RMD160 9e6f5f88aed59b8a3c017822a2da566369b227ce SHA1 c7f58dcfb71ba59853c3db18ddd33779262bc50b SHA256 7c693fd69e817102a50b2abdcc897cff1b107ba3c79e5b289511e59eecb2b674
 MD5 bf617f1e30a40ffc0dddd6a394479b0f openvz-sources-022.077.ebuild 788
 RMD160 9e6f5f88aed59b8a3c017822a2da566369b227ce openvz-sources-022.077.ebuild 788
@@ -16,6 +17,10 @@ EBUILD openvz-sources-022.078-r2.ebuild 793 RMD160 3b07daeb85865399e9fbee1d24efb
 MD5 b27d114def4368fcc88f06e3b0cd6025 openvz-sources-022.078-r2.ebuild 793
 RMD160 3b07daeb85865399e9fbee1d24efb157473f7e17 openvz-sources-022.078-r2.ebuild 793
 SHA256 2c915f8f0888da0eae4be364cedca0b5e9f3e8b8fbf1593b6eccc4c9f772e0d2 openvz-sources-022.078-r2.ebuild 793
+EBUILD openvz-sources-022.078-r3.ebuild 793 RMD160 a3f892d761f5e285f72ab405fdbf60dbcac19bf4 SHA1 9e87bb93fa689bad2f3a7a09eae6809cc6969e42 SHA256 67ff6106378a7de422e34f540bee379cd3070c6e029316f27708b6446a413766
+MD5 4fa01c2c2258b7cb9b1abe867ddf9a86 openvz-sources-022.078-r3.ebuild 793
+RMD160 a3f892d761f5e285f72ab405fdbf60dbcac19bf4 openvz-sources-022.078-r3.ebuild 793
+SHA256 67ff6106378a7de422e34f540bee379cd3070c6e029316f27708b6446a413766 openvz-sources-022.078-r3.ebuild 793
 EBUILD openvz-sources-026.015-r2.ebuild 798 RMD160 1dd9c562f2bb2619229ca1a46245ad24d7602117 SHA1 a798e53226cc3e0415d24adb723eb153b4ea4f80 SHA256 2c68783917c027a7e425445b067fdbcb9f93c1bf7cea5746f668ba0889afbcfb
 MD5 30a88e4f9536c2343e31b4568e19d754 openvz-sources-026.015-r2.ebuild 798
 RMD160 1dd9c562f2bb2619229ca1a46245ad24d7602117 openvz-sources-026.015-r2.ebuild 798
@@ -28,10 +33,10 @@ EBUILD openvz-sources-026.018.ebuild 795 RMD160 eb81837829128455f8cd3e3d512bc309
 MD5 090fd7ccaf6f8743eef7d06faaef7083 openvz-sources-026.018.ebuild 795
 RMD160 eb81837829128455f8cd3e3d512bc30934027656 openvz-sources-026.018.ebuild 795
 SHA256 9d07619be6f5ea0ec7936af3f7ea25e53608f91c96d9350f8fb3b35f2a6f7e91 openvz-sources-026.018.ebuild 795
-MISC ChangeLog 7815 RMD160 ad78c088cd96e2fd8a5d842d90cd7880feda5330 SHA1 c4eefa9b8afc88c182988aa050d42479bbe4a635 SHA256 b160b62ffcff6ef414f4226a2680d5adc992ed0ab19c5d924cd3eedcc4ad770d
-MD5 bf05b6f730389a30bb6d62861a830bef ChangeLog 7815
-RMD160 ad78c088cd96e2fd8a5d842d90cd7880feda5330 ChangeLog 7815
-SHA256 b160b62ffcff6ef414f4226a2680d5adc992ed0ab19c5d924cd3eedcc4ad770d ChangeLog 7815
+MISC ChangeLog 7988 RMD160 6983894658fc0e14417f3992699db0fa2c26ac5e SHA1 49bc922f42d7dc2d7e12c38ceac580c22a0d200a SHA256 2e6b63f213e48da037d4c6772224c6505eedd1d1f0eeaf36c0e7bfeba407397b
+MD5 ff961860ffcc8f3500928dcf038e823d ChangeLog 7988
+RMD160 6983894658fc0e14417f3992699db0fa2c26ac5e ChangeLog 7988
+SHA256 2e6b63f213e48da037d4c6772224c6505eedd1d1f0eeaf36c0e7bfeba407397b ChangeLog 7988
 MISC metadata.xml 563 RMD160 108fdcf814f98a73f85efd8dbb958097bd661429 SHA1 5fd9bd40dc4d2b712cb620cb736531bf7002ca20 SHA256 2f3dd3bbbc518c57717fc13b4c12dddd41413cf0aca1869c0fc8667f26ccbdfb
 MD5 ea0a561ec3e0c4ffc620051c3c41c225 metadata.xml 563
 RMD160 108fdcf814f98a73f85efd8dbb958097bd661429 metadata.xml 563
@@ -42,6 +47,9 @@ SHA256 4bf4c249039fb2cfc33e82748a999adf83979d4e596b4ba696208ca28a91924a files/di
 MD5 b7eafb906dfa05923bbb9111832bbff9 files/digest-openvz-sources-022.078-r2 545
 RMD160 8f429fa6283142d54cbe92027669ba9522535fa6 files/digest-openvz-sources-022.078-r2 545
 SHA256 8775a77b8be6bb4009d25fb382ec0f137141448aa9e6441c87c677cb52fe3b9e files/digest-openvz-sources-022.078-r2 545
+MD5 275d9c49a128c3841528b0694a0af0db files/digest-openvz-sources-022.078-r3 545
+RMD160 afd4e753940f1def0ea5a672fccd7a36e27110b7 files/digest-openvz-sources-022.078-r3 545
+SHA256 5f1daa7647c974d3b00452148f919a31597dd2996325efb21933089da464f8a2 files/digest-openvz-sources-022.078-r3 545
 MD5 8e40e2114814ec1d46fa081eaf3e6415 files/digest-openvz-sources-026.015-r2 548
 RMD160 489b7151b8b5e61b89f967c7ddc4731fc297c254 files/digest-openvz-sources-026.015-r2 548
 SHA256 1b74e18a7e8a23cb3a9e5b059224a458160bdd695fc15094d440b0954363c1e2 files/digest-openvz-sources-026.015-r2 548
@@ -54,7 +62,7 @@ SHA256 f3b2702ad4af397d60b957659ead7ceb95dce6173b56ca842c541efd214b0ba8 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFGUMbyuNVb5qfaOYRAk9dAKCARLCGz2Z6xFSHrHxAadWe7lw55QCgk+0k
-rwCWNrKwLy8O59kS6g6JKng=
-=Bmzi
+iD8DBQFFGpEUyuNVb5qfaOYRAvchAJ4xTrfpDGv4KfvZveEaFXTyI0OFzQCeMLCV
+S0FahTwna0ffXoXt4XLi1zY=
+=UfDD
 -----END PGP SIGNATURE-----
