@@ -1,0 +1,6 @@
+MD5 2f8b0030ce970f3c1a460faf5d2b1cec linux-2.6.8.tar.bz2 35634061
+RMD160 4aac2f7a109d710330e84cf246a36959e5caea4b linux-2.6.8.tar.bz2 35634061
+SHA256 42619b1dd4bd896d167a61cc0956d2b36ef922086018bbc27149627360c5a7f7 linux-2.6.8.tar.bz2 35634061
+MD5 15c75ea1fedd4b05d9af752ab7029784 openvz-patches-2.6.8_022.078-r3.tar.bz2 3579047
+RMD160 876acf249b4188e3ed10ebee6b6a05c431fbebb7 openvz-patches-2.6.8_022.078-r3.tar.bz2 3579047
+SHA256 a2b6caf79e3341717bbf1a048cd6bad4d9abfb2afeb36549155e6e57280ffb8c openvz-patches-2.6.8_022.078-r3.tar.bz2 3579047
